<resources>
    <string name="app_name">EPF Absences</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="connexion">Connection</string>
    <string name="mes_absences">My absences</string>
    <string name="mes_statistiques">My stats</string>
    <string name="se_deconnecter">Disconnect</string>
    <string name="Prevenir_absence">Warn an absence</string>
    <string name="Autres">Others</string>
    <string name="Fonctions">Fonctions</string>
    <string name="button">Button</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu">Menu</string>
    <string name="WPassword">Wrong username and/or password. Try again.</string>
    <string name="call_api">call_api</string>
    <string name="call_api_2">call_api_2</string>
    <string name="cours">subject</string>
    <string name="heure_debut">beggining hour</string>
    <string name="heure_fin">end hour</string>
    <string name="nom_prof">Surname teacher</string>
    <string name="prenom_prof">Name teacher</string>
    <string name="statut">Status</string>
    <string name="absences_promo">Promotion absences</string>
    <string name="layout_stats">Layout stats</string>
    <string name="layout_prevenir_absence">Layout warn an absence</string>
    <string name="layout_absences">Layout absences</string>
    <string name="bienvenue">Welcome :</string>
    <string name="user">User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="absences_anticipes">Anticipated absences</string>
    <string name="absences_professeurs">Professors absences</string>
    <string name="absences_eleves">Students absences</string>
    <string name="alertes">Alerts</string>
    <string name="statistiques_eleves">Student statistics</string>
    <string name="layout_alertes">Layout alertes</string>
    <string name="layout_absences_par_promotion">Show promotion absences :</string>
    <string name="layout_absences_anticipees">Layout absences anticipées</string>
    <string name="layout_absences_en_direct">Choose the subject to show live :</string>
    <string name="layout_absences_professeurs">Layout Absences professeurs</string>
    <string name="layout_choix_promotion">Choose the promotion to show :</string>
    <string name="voir_les_absences">Show the absences</string>
    <string name="statistiques_par_promotion">Statistics for a promotion</string>
    <string name="classement_absences">Show the ranking of the students absences</string>
    <string name="afficher_graphique_promotion">Show the absenteeism graph for the promotion</string>
    <string name="voir_les_absences_en_direct">Show the absences live of the selected subject</string>
    <string name="afficher_mes_statistiques">Show my statistics</string>
    <string name="afficher_ma_liste_d_absences">Show my absenteeism list</string>
    <string name="afficher_les_statistiques_correspondantes">Show the statistics corresponding</string>
    <string name="afficher_la_liste_d_absences_correspondante">Show the absenteeism list corresponding</string>
    <string name="date">Date</string>
    <string name="module">Subject</string>
    <string name="nom_l_ve">Surname student</string>
    <string name="pr_nom_prof">Name teacher</string>
    <string name="pr_nom_l_ve">Name student</string>
    <string name="nombre_d_absences">Number of absences</string>
    <string name="actualiser">Actualize</string>
    <string name="modifier_le_statut_de_l_absence">Modify the absence\'s status :</string>
    <string name="supprimer_l_absence">Delete the absence :</string>
    <string name="supprimer_absence">Delete the absence</string>
    <string name="annuler">Cancel</string>
    <string name="valider">Validate</string>
    <string name="ou">OR</string>
    <string name="absence_de">Absence of</string>
    <string name="cours_de">Subject of :</string>
    <string name="redirection_en_cours">Redirecting ...</string>
    <string name="recherche">Research</string>
    <string name="filtrer">Filter</string>
    <string name="defiltrer">Unfilter</string>

    <string-array name="status">
        <item>absence justifiee</item>
        <item>absent</item>
        <item>depart anticipe</item>
        <item>retard</item>
        <item>exclu</item>
    </string-array>
    <string name="absences_direct">LIVE absences</string>
    <string name="tableau_de_bord">Dashboard</string>
    <string name="moyenne_d_absences_par_l_ve_et_par_promotion">Moyenne d\'absences par élève et par promotion :</string>
    <string name="nombre_d_l_ves_par_promotion">Nombre d\'élèves par promotion :</string>
    <string name="nombre_d_absences_par_promotion">Nombre d\'absences par promotion :</string>
    <string name="nom_compte">Login</string>
    <string name="connexion_app">Login</string>
    <string name="logo_epf">logo_epf</string>
    <string name="promotion">Promotion</string>

</resources>
