<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<item android:title="@string/Fonctions">
    <menu>
        <item
            android:id="@+id/mes_absences"
            android:title="@string/mes_absences"
            android:icon="@mipmap/ic_pan_tool_black_24dp"/>

        <item
            android:id="@+id/mes_statistiques"
            android:title="@string/mes_statistiques"
            android:icon="@mipmap/ic_equalizer_black_24dp"/>
    </menu>
</item>
<item android:title="@string/Autres">
    <menu>
        <item
            android:id="@+id/deconnexion"
            android:title="@string/se_deconnecter"
            android:icon="@mipmap/ic_exit_to_app_black_24dp"/>
    </menu>
</item>
</menu>

