<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/Fonctions">
        <menu>
            <item
                android:id="@+id/absences_promotion"
                android:title="@string/absences_promo"
                android:icon="@mipmap/ic_group_black_24dp"/>

            <item
                android:id="@+id/stats_promotion"
                android:title="@string/statistiques_par_promotion"
                android:icon="@mipmap/ic_equalizer_black_24dp"/>
        </menu>
    </item>
    <item android:title="@string/Autres">
        <menu>
            <item
                android:id="@+id/deconnexion"
                android:title="@string/se_deconnecter"
                android:icon="@mipmap/ic_exit_to_app_black_24dp"/>
        </menu>
    </item>
</menu>

