<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btnAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:layout_marginLeft="318dp"
        android:layout_marginStart="291dp"
        android:onClick="OnClick"
        android:text="@string/call_api"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TableLayout
        android:layout_width="706dp"
        android:layout_height="203dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="62dp"
        android:stretchColumns="*"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.452">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:background="@drawable/border"
                android:text="@string/cours"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvRepCours"
                android:background="@drawable/border"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:background="@drawable/border"
                android:text="@string/heure_debut"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvRepHeureD"
                android:background="@drawable/border"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:background="@drawable/border"
                android:text="@string/heure_fin"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvRepHeureF"
                android:background="@drawable/border"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:background="@drawable/border"
                android:text="@string/nom_prof"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvRepNomP"
                android:background="@drawable/border"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:background="@drawable/border"
                android:text="@string/prenom_prof"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvRepPrenomP"
                android:background="@drawable/border"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:background="@drawable/border"
                android:text="@string/statut"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvRepStatut"
                android:background="@drawable/border"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="OnClick2"
        android:text="@string/call_api_2"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAPI"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintLeft_toRightOf="@+id/btnAPI"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/layout_absences"
        android:textSize="24sp" />
</FrameLayout>