<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:weightSum="1">



        <TextView
            android:id="@+id/tvInfos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    <TextView
        android:id="@+id/tvSuppr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/supprimer_l_absence"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSupprimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/supprimer_absence"
        android:textAlignment="center"
        android:textSize="20sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/tvOU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/tvModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:text="@string/modifier_le_statut_de_l_absence"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerStatut"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="0.04"
        android:background="@drawable/border"
        android:entries="@array/status"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnValider"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/valider"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAnnuler"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/annuler"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>