<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dddddd"
    tools:context="com.example.lucie.absences20.MainActivity"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:layout_editor_absoluteY="92dp"
        tools:layout_editor_absoluteX="254dp"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteY="265dp"
        tools:layout_editor_absoluteX="321dp"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="174dp"
        android:layout_height="42dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="321dp"
        tools:layout_editor_absoluteY="404dp"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="277dp"
        tools:text="@string/Username"
        android:layout_above="@+id/editText4"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8"
        android:layout_marginBottom="86dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:layout_marginLeft="265dp"
        android:layout_marginStart="265dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="417dp"
        tools:text="@string/password"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/tvStatsEleve"
        android:layout_toEndOf="@+id/tvStatsEleve" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:onClick="login"
        android:text="@string/connexion"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="525dp"
        tools:text="@string/connexion"
        android:layout_below="@+id/imageView2"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="37dp" />

    <TextView
        android:id="@+id/tvStatsEleve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:visibility="invisible"
        tools:layout_editor_absoluteY="485dp"
        tools:layout_editor_absoluteX="265dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="280dp"
        android:layout_height="353dp"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/logo_epf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554"
        app:srcCompat="@drawable/icon_epf"
        tools:layout_editor_absoluteX="752dp"
        android:layout_below="@+id/tvStatsEleve"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="197dp"
        android:layout_marginEnd="197dp" />

</RelativeLayout>
