<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dddddd"
    android:fitsSystemWindows="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/absences_prom"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AbsencesPromotion">

        <Spinner
            android:id="@+id/spinner2"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="138dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="49dp" />

        <Button
            android:id="@+id/buttonGoList"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:onClick="onClick"
            android:text="@string/afficher_la_liste_d_absences_correspondante"
            android:textSize="18sp"
            android:layout_marginLeft="41dp"
            android:layout_marginStart="41dp"
            android:layout_alignTop="@+id/spinner2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonGraph"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:onClick="onClick"
            android:text="@string/afficher_graphique_promotion"
            android:textSize="18sp"
            android:layout_alignTop="@+id/spinner2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ListView
            android:id="@+id/listViewClassement"
            android:layout_width="match_parent"
            android:layout_height="490dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="37"
                android:text="@string/pr_nom_l_ve"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="37"
                android:text="@string/nom_l_ve"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="26"
                android:text="@string/nombre_d_absences"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="170dp"
                android:background="@android:color/black" />
        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:background="#cad9ff"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />

</android.support.v4.widget.DrawerLayout>